--- a/src/css/Routines.css
+++ b/src/css/Routines.css
@@ -15,11 +15,11 @@
 .Routines .wrapper {
 	background: #eee;
 	border: 1px solid #ccc;
-	padding: 1.5rem;
-	padding-bottom: 1.8rem;
+	padding: 1.8rem 1em;
+	padding-bottom: 2rem;
 }
 
 .Routines li {
-	margin-bottom: 3rem;
+	margin-bottom: 3.5rem;
 }
 
